# DSPanel

./: .editorconfig  .gitignore  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DSPanel.slnx  LICENSE  NOTICE  README.md  SECURITY.md  coverlet.runsettings  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pr-epic-6.md  stryker-config.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml  security-audit.yml
.storybook/: preview.ts
docs/: architecture.md  backlog.md  brainstorming-session-results.md  brief.md  prd.md  release-smoke-test.md  ux-guidelines.md
docs/architecture/: coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  error-handling-strategy.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  localization.md  next-steps.md  security.md  source-tree.md  tech-stack.md  test-strategy-and-standards.md
docs/prd/: epic-1-foundation-and-core-lookup.md  epic-10-reports-export-and-compliance.md  epic-11-audit-automation-and-extensibility.md  epic-12-rbac-settings-and-polish.md  epic-13-localization.md  epic-14-security-aware-admin.md  epic-2-support-actions-and-account-management.md  epic-3-comparison-and-permissions-audit.md  epic-4-group-management-and-bulk-operations.md  epic-5-presets-onboarding-and-offboarding-workflows.md  epic-6-exchange-diagnostics.md  epic-7-administration-and-object-management.md  epic-8-infrastructure-health-and-monitoring.md  epic-9-security-risk-scoring-and-attack-detection.md  epic-list.md  goals-and-background-context.md  index.md  next-steps.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/qa/: epic-1-qa-report.md  epic-10-qa-report.md  epic-11-qa-report.md  epic-12-qa-report.md  epic-14-qa-report.md  epic-2-qa-report.md  epic-4-qa-report.md  epic-5-qa-report.md  epic-6-qa-report.md  epic-7-qa-report.md  epic-8-qa-report.md  epic-9-qa-report.md  epics-1-2-3-qa-report.md
docs/stories/: 1.1.project-skeleton.md  1.10.user-lookup.md  1.11.healthcheck-badge.md  1.12.computer-lookup.md  1.13.error-handling-foundation.md  1.2.directory-provider.md  1.3.permission-detection.md  1.4.theme-system.md  1.5.app-shell-navigation.md  1.6.common-controls.md  1.7.data-display-components.md  1.8.form-controls-validation.md  1.9.dialogs-notifications.md  10.1.csv-pdf-export.md  10.2.scheduled-reports.md  10.3.automated-cleanup.md  10.4.compliance-templates.md  11.1.audit-log.md  11.2.change-history.md  11.3.automation-rules.md  (+55 more)
scripts/: audit-action-names.allowlist  check-audit-action-names.sh  check-spn-list-parity.sh  populate-ad-epic11-gpo.ps1  populate-ad-epic7.ps1
src/: App.test.tsx  App.tsx  i18n.test.ts  i18n.ts  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/commands/: account.rs  cleanup.rs  compliance.rs  directory.rs  group.rs  infrastructure.rs  mod.rs  security.rs  storage.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: contact.rs  dc_health.rs  deleted_object.rs  directory_entry.rs  dns_validation.rs  exchange_mailbox.rs  exchange_online.rs  mod.rs  object_snapshot.rs  ou_node.rs  preset.rs  printer.rs  replication_status.rs  security.rs  system_metrics.rs  topology.rs
src-tauri/src/services/: app_settings.rs  audit.rs  cleanup.rs  comparison.rs  compliance.rs  credential_store.rs  dacl.rs  dc_health.rs  demo_provider.rs  directory.rs  dns_validation.rs  dpapi.rs  export.rs  gpo.rs  graph_exchange.rs  health.rs  ldap_directory.rs  mfa.rs  mod.rs  ntfs.rs  ntfs_analyzer.rs  object_snapshot.rs  password.rs  permissions.rs  preset.rs  replication.rs  replication_status.rs  resilience.rs  resilient_directory.rs  security.rs  security_indicators.rs  snapshot.rs  spn.rs  topology.rs  update.rs  workstation_monitor.rs
src-tauri/tests/: ldap_integration.rs
(+750 files in other folders)
