[package]
name = "dspanel"
version = "0.1.0"
description = "DSPanel - Active Directory management tool"
authors = ["Romain G."]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "dspanel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "process"] }
ldap3 = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
gssapi = ["ldap3/gssapi"]

[dev-dependencies]
