[package]
name = "dspanel"
version = "0.3.0"
description = "DSPanel - Active Directory management tool"
authors = ["Romain G."]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "dspanel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "net", "process"] }
ldap3 = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha1 = "0.10"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
hmac = "0.12"
base32 = "0.5"
qrcode = "0.14"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Security_Authorization",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[features]
default = ["gssapi"]
gssapi = ["ldap3/gssapi"]
demo = []

[dev-dependencies]
